# deckflaxia

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: README.md  ci.yml  ci.yml.disabled
.github/workflows-disabled/: ci.yml.disabled
.omo/notepads/fix-juce-screenshot/: decisions.md  issues.md  learnings.md  problems.md
.omo/plans/: fix-juce-screenshot.md
cmake/: JuceIntegration.cmake  LicenseReport.cmake  PluginSandboxPackagingCheck.cmake  README.md  StaticAnalysis.cmake
docs/: user-runbook-developer-operations.md
docs/architecture/: alpha-architecture.md
docs/compliance/: ci-license-static-analysis.md
src/analysis/: AnalysisPipeline.cpp  AnalysisPipeline.h  WaveformCache.cpp  WaveformCache.h
src/app/: AlphaSmoke.cpp  AlphaSmoke.h  Bootstrap.cpp  Bootstrap.h  EngineCommandQueue.h  Main.cpp  PlayableSmoke.cpp  PlayableSmoke.h  UiShell.cpp  UiShell.h
src/audio/: AudioDeckSmoke.cpp  AudioDeckSmoke.h  AudioEngine.cpp  AudioEngine.h  AudioGraphContracts.h  JuceAudioDeviceEngine.cpp  JuceAudioDeviceEngine.h  MixerControls.cpp  MixerControls.h  TimeStretchEngine.cpp  TimeStretchEngine.h
src/audio/routing/: AudioRoutingGraph.cpp  AudioRoutingGraph.h
src/core/: BackgroundWorkerContracts.h  DomainModels.cpp  DomainModels.h
src/decks/: AudioDeck.cpp  AudioDeck.h  FourDeckPlaybackCore.cpp  FourDeckPlaybackCore.h  SequencerDeck.cpp  SequencerDeck.h
src/ipc/: BoundedAudioBuffer.h  PluginSandboxHelperMain.cpp
src/midi/: MidiBuffer.cpp  MidiBuffer.h  MidiLearn.cpp  MidiLearn.h
src/persistence/: Persistence.cpp  Persistence.h
src/plugins/: PluginChainProcessor.cpp  PluginChainProcessor.h  PluginManager.cpp  PluginManager.h  PluginSandbox.cpp  PluginSandbox.h
src/rendering/: WaveformRenderer.cpp  WaveformRenderer.h
src/ui/: BrowserWaveformBeatgrid.cpp  BrowserWaveformBeatgrid.h  JuceComponentTree.cpp  JuceComponentTree.h  JuceUiCommandAdapter.cpp  JuceUiCommandAdapter.h  VST3EditorUi.cpp  VST3EditorUi.h
tests/: AlphaSmokeTests.cpp  BootstrapTests.cpp  EdgeCaseTests.cpp  FixtureTests.cpp  PerformanceHardeningTests.cpp  PlayableSmokeTests.cpp  RealTimeSafetyContracts.cpp
tests/audio/: AudioEngineTests.cpp  AudioRoutingGraphTests.cpp  MixerMidiTests.cpp  TimeStretchTests.cpp
tests/core/: CoreDomainTests.cpp
tests/decks/: AudioDeckTests.cpp  JuceAudioDeckTests.cpp
tests/fixtures/dj-workflow/: manifest.json
tests/fixtures/plugins/: README.md  deterministic_gain.fixture.json
tests/fixtures/plugins/real-vst3-fixture/: GenerateManifest.cmake  RealVst3GainFixture.cpp  RealVst3GainFixture.h
tests/midi/: MidiLearnTests.cpp  SequencerTests.cpp
tests/persistence/: PersistenceTests.cpp
tests/plugins/: PluginManagerTests.cpp  PluginSandboxTests.cpp  VST3ProcessingTests.cpp
tests/ui/: BrowserWaveformBeatgridTests.cpp  JuceUiCommandAdapterTests.cpp  JuceUiSmokeTests.cpp  UiShellTests.cpp  VST3EditorUiTests.cpp  VerifyJuceScreenshot.cmake
